crates/sui-prover/tests/snapshots/loop_invariant/asserts_loop_mutating_quantified.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/loop_invariant/asserts_loop_mutating_quantified.fail.move:48:9
   │
48 │         ensures(forall!(|j| safe_at(*j, old_v)));
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
49 │     });
50 │     while (i < n) {
   │            - loop invariant does not hold on loop entry
   │
   =     at tests/inputs/loop_invariant/asserts_loop_mutating_quantified.fail.move:58: increment_all_spec
